--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      
+
       <a href="/page2.html">Other page</a>
     </nav>
     <main>
-    <button id="btn">HI</button>
+      <button id="btn">Click to Vibrate</button>
     </main>
   </body>
 </html>
